# freeling

./: .gitignore  COPYING  Makefile.in  README.md  configure  configure.ac  freeling.pc  freeling.pc.in
APIs/common/: freeling.i  templates.i
APIs/java/: Analyzer.java  Makefile  README.md  freeling_javaAPI.i
APIs/perl/: Makefile  README.md  freeling2kaf.pl  freeling_perlAPI.i  sample.perl
APIs/php/: analyzer.php
APIs/python/: Makefile  README  README.md  freeling_pythonAPI.i  sample.py
APIs/ruby/: Makefile  freeling_rubyAPI.i  sample.rb
data/: Makefile  Makefile.am  Makefile.in
data/ca/dep/: verbssubcats.cat
data/ca/dictionary/: header
data/ca/dictionary/entries/: ordinals
data/config/: ca.cfg  cs.cfg  fr.cfg  gl.cfg  it.cfg  old-es.cfg  pt.cfg
data/cs/dictionary/entries/: testdict
data/en/: locucions.README
data/en/dictionary/entries/: adjs  adjs.comp  adv  adv.comp  contraccions  noms  tanc
data/en/nerc/nec/: nec-f35-poor1-5abs.lex  nec-f35-rich-1abs.lex
data/es/old-es/dictionary/entries/: old-es.adj  old-es.tanc  old-es.verb
data/gl/dictionary/entries/: other
data/it/dictionary/entries/: adjs  other
data/pt/dictionary/entries/: adjs  other
doc/: README  README.md  refman.cfg
doc/grammars/: ca+esLABELINGtags
doc/refman/html/: RE__map_8cc.html  RE__map_8cc__incl.map  RE__map_8cc__incl.md5  RE__map_8h.html  RE__map_8h__dep__incl.map  RE__map_8h__dep__incl.md5  RE__map_8h__incl.map  RE__map_8h__incl.md5  RE__map_8h_source.html  accents_8h.html  accents_8h__dep__incl.map  accents_8h__dep__incl.md5  accents_8h__incl.map  accents_8h__incl.md5  accents_8h_source.html  accents__modules_8h.html  accents__modules_8h__dep__incl.map  accents__modules_8h__dep__incl.md5  accents__modules_8h__incl.map  accents__modules_8h__incl.md5  accents__modules_8h_source.html  adaboost_8h.html  adaboost_8h__dep__incl.map  adaboost_8h__dep__incl.md5  adaboost_8h__incl.map  adaboost_8h__incl.md5  adaboost_8h_source.html  aligner_8h.html  aligner_8h__incl.map  aligner_8h__incl.md5  aligner_8h_source.html  alternatives_8cc.html  alternatives_8cc__incl.map  alternatives_8cc__incl.md5  alternatives_8h.html  alternatives_8h__dep__incl.map  alternatives_8h__dep__incl.md5  alternatives_8h__incl.map  alternatives_8h__incl.md5  alternatives_8h_source.html  (+1686 more)
doc/tagsets/: tagset-ca.html  tagset-es.html  tagset-ru.html
doc/userman/: biblio.bib  userman.tex
doc/userman/html/: WARNINGS  footnode.html  images.bbl  images.pl  images.tex  internals.pl  labels.pl  node1.html  node10.html  node100.html  node101.html  node102.html  node103.html  node104.html  node105.html  node106.html  node107.html  node108.html  node109.html  node11.html  node110.html  node111.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node2.html  node20.html  node21.html  node22.html  node23.html  node24.html  node25.html  node26.html  node27.html  node28.html  (+80 more)
msvc/: README.md
msvc/10.0/analyzer/: analyzer.vcxproj  analyzer.vcxproj.filters
msvc/10.0/analyzer_client/: analyzer_client.vcxproj  analyzer_client.vcxproj.filters
msvc/10.0/benchmark/: benchmark.vcxproj  benchmark.vcxproj.filters
msvc/10.0/bom_add/: bom-add.cpp  bom_add.vcxproj  bom_add.vcxproj.filters
msvc/10.0/foma/: foma.vcxproj  foma.vcxproj.filters
msvc/10.0/freeling/: freeling.sln  freeling.vcxproj  freeling.vcxproj.filters
msvc/10.0/mt_analyzer/: mt_analyzer.vcxproj  mt_analyzer.vcxproj.filters
msvc/10.0/tests/: tests.vcxproj  tests.vcxproj.filters
msvc/10.0/update-probs/: update-probs.vcxproj  update-probs.vcxproj.filters
src/: Makefile.am  Makefile.in  automake_options.am
src/include/: Makefile.am  Makefile.in  freeling.h
src/include/freeling/: regexp.h  safe_map.h  tree.h  version.h
src/libfreeling/: Makefile.am  Makefile.in  RE_map.cc  alternatives.cc  automat.cc  bioner.cc  configfile.cc  csr_kb.cc  database.cc  dep_rules.cc  dependencies.cc  dependency_parser.cc  dictionary.cc  foma_FSM.cc  hmm_tagger.cc  language.cc  lexer.cc  locutions.cc  maco.cc  maco_options.cc  nec.cc  ner.cc  ner_module.cc  np.cc  phonetics.cc  prefTree.cc  probabilities.cc  processor.cc  punts.cc  regexp.cc  semdb.cc  senses.cc  splitter.cc  suffixes.cc  tagger.cc  tagset.cc  tokenizer.cc  traces.cc  ukb.cc  util.cc  (+2 more)
src/libfreeling/accents/: accents.cc  accents_default.cc  accents_es.cc  accents_gl.cc
src/libfreeling/chart_parser/: chart.cc  chart_parser.cc  grammar.cc
src/libfreeling/coref/: coref.cc  coref_fex.cc
src/libfreeling/dates/: dates.cc  dates_ca.cc  dates_default.cc  dates_en.cc  dates_es.cc  dates_gl.cc  dates_pt.cc  dates_ru.cc
src/libfreeling/fex/: fex.cc  fex_lexicon.cc  fex_rule.cc  nerc_features.cc
src/libfreeling/foma/: apply.c  constructions.c  determinize.c  io.c  lex.cmatrix.c  lex.lexc.c  lex.yy.c  minimize.c  regex-tab.c  structures.c  trie.c
src/libfreeling/lang_ident/: idioma.cc  lang_ident.cc
src/libfreeling/numbers/: numbers.cc  numbers_ca.cc  numbers_cs.cc  numbers_default.cc  numbers_en.cc  numbers_es.cc  numbers_gl.cc  numbers_it.cc  numbers_pt.cc  numbers_ru.cc
src/libfreeling/omlet/: adaboost.cc  classifier.cc  dataset.cc  example.cc  libsvm.cc  (+3 more)
src/main/: Makefile.am  Makefile.in  README.md
src/main/omlet/: README
src/main/omlet/sample1/: classify.cc  train.cc
src/main/omlet/sample2/: classify.cc  dummy_rule.h  train.cc
src/main/sample_analyzer/: analyzer.cc  analyzer_client.cc  config.h  main.cc  output.cc  output.h  socket.h  stats.h  threaded_analyzer.cc  threaded_processor.h
src/main/sample_analyzer/.deps/: analyzer.Po  analyzer_client.Po  main.Po  output.Po  threaded_analyzer.Po
src/main/simple_examples/: Makefile  README  alts.cc  coreferences.cc  fl1_morph.cc  fl2_tagger.cc  fl3_chunker.cc  fl4_dependences.cc  ident.cc  kbest_tagger.cc  sample.cc
src/tests/: Makefile.am  Makefile.in  common.h  dates_modules_test.cc  dictionary_tests.cc  main_test.h  np_test.cc  numbers_modules_test.cc  performanceMon.h  splitter_test.cc  test_speed.cc  test_speed_config.h
src/utilities/: Makefile.am  Makefile.in
(+97 files in other folders)
